# orders

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  compile.sh  compile_commands.json  generate_compile_commands.sh
.cache/clangd/index/: CodeEan.cpp.1988C68C5FF9C0A6.idx  CodeEan.cpp.2861C09DE3D0BA8C.idx  CodeEan.cpp.AB90BC331618F4EC.idx  CodeEan.hpp.5C30694C59D7296D.idx  CodeEan.hpp.876557A50D2319AC.idx  CodeEan.hpp.8DC6422A38B3052A.idx  Database.cpp.78D9327125F34B2E.idx  Database.cpp.88567BB192179FD5.idx  Database.cpp.C2BB827AD289142D.idx  Database.hpp.6FA95BF4902961EF.idx  Database.hpp.D4D95CDCD7139F93.idx  Database.hpp.FC8E35BEE88C8F21.idx  MainWindow.cpp.45D586286F700BDC.idx  MainWindow.cpp.8D9A3B88EAAE03BA.idx  MainWindow.cpp.A91755DD983BF8F2.idx  MainWindow.hpp.7B6512DA724999CD.idx  MainWindow.hpp.C46F417106FC4859.idx  MainWindow.hpp.CCAE04564726E9C6.idx  Product.hpp.16A3C2E5B4327117.idx  Product.hpp.760A7B001511DA50.idx  Product.hpp.C2D30B9F3FA79016.idx  ScopeExit.hpp.4C6EA27210108DC1.idx  ScopeExit.hpp.514A7546883AFB56.idx  ScopeExit.hpp.7095E8ABD5BB009A.idx  main.cpp.AE242C6100FD50EC.idx  main.cpp.BC41010717A92DEA.idx  main.cpp.D1B3A82281C0B763.idx  moc_MainWindow.cpp.1FB43CFAD2A0F4DB.idx  moc_MainWindow.cpp.254AE9C598F0ECCF.idx  moc_MainWindow.cpp.9ECF33E744C87E85.idx  mocs_compilation.cpp.8C056BDA5815A62B.idx  mocs_compilation.cpp.B1D0965C07AF8519.idx  mocs_compilation.cpp.BE10DB68AE842BC5.idx
cmake/: PythonVenv.cmake
include/: CodeEan.hpp  Database.hpp  DatabaseError.hpp  DatabaseProductsModel.hpp  MainWindow.hpp  MarginCalculator.hpp  OrderTableModel.hpp  OrderTableView.hpp  ProcessRunner.hpp  Product.hpp  ProductFormWidget.hpp  ProductsTableView.hpp  ScopeExit.hpp
python/: Database.py  barcodeGenerator.py  barcode_generator_requirements.txt  toOds.py
src/: CodeEan.cpp  Database.cpp  MainWindow.cpp  MarginCalculator.cpp  OrderTableModel.cpp  OrderTableView.cpp  ProcessRunner.cpp  ProductFormWidget.cpp  ProductsTableView.cpp  main.cpp
translations/: orders_pl.ts  orders_ru.ts
